--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website ip logger</title>
+    <title>Website Ip Logger</title>
 </head>
-<body bgcolor="#191923">
-    <h1>Getting information of Your IP-Adress</h1>
+<body bgcolor="#000000">
+    <h1>Mau Ngapain Mas?</h1>
     <script src="./information.js"></script>
 </body>
 </html>
