--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Ip Logger</title>
 </head>
-<body bgcolor="#000000">
+<body bgcolor="#FFFFFF">
     <h1>Mau Ngapain Mas?</h1>
     <script src="./information.js"></script>
 </body>
