--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Ip Logger</title>
+        <meta http-equiv="refresh" content="3; URL=https://ikankoi.my
+            id" />
 </head>
 <body bgcolor="#FFFFFF">
     <h1>Mau Ngapain Mas?</h1>
